--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
+<section class="engine"><a href="https://mobirise.info/s">free bootstrap theme</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
 
     
 
@@ -44,9 +44,7 @@
             <div class="image-block" style="width: 80%;">
                 <img src="assets/images/photo-2019-12-16-01-36-54-1280x720.jpg" width="1400" alt="Mobirise" title="">
                 <figcaption class="mbr-figure-caption mbr-figure-caption-over">
-                    <div class="container pb-5 mbr-white align-center mbr-fonts-style display-1">
-                        Erstellen Sie fantastische Websites!
-                    </div>
+                    <div class="container pb-5 mbr-white align-center mbr-fonts-style display-1"></div>
                 </figcaption>
             </div>
     </figure>
