--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
 
     
 
@@ -169,7 +169,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 tombond100 &nbsp;- Badtian.o</p>
+                    © Copyright 2019 tombond100 &nbsp;- Badtian.o &nbsp;&nbsp;https://github.com/bastibond&nbsp;</p>
             </div>
         </div>
     </div>
