--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
 
     
 
@@ -132,7 +132,7 @@
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">TARTES und TÖRTCHEN</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Süß und lecker essen</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Essen Sie süß und lecker =&nbsp;Eat sweet and tasty</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-4" href="https://tartesundtoertchen.de" target="_blank">TARTES und TÖRTCHEN</a></div>
             </div>
         </div>
