create github pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
 
     
 
@@ -193,6 +193,8 @@
         </div>
     </div>
 </section>
+
+<div id="custom-html-h"><a href="//www.dmca.com/Protection/Status.aspx?ID=c8bac349-a769-4e41-92a1-03383b7b8e89" title="DMCA.com Protection Status" class="dmca-badge"> <img src="https://images.dmca.com/Badges/_dmca_premi_badge_7.png?ID=c8bac349-a769-4e41-92a1-03383b7b8e89" alt="DMCA.com Protection Status"></a>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
