--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-rKLVcMXZE7" id="image3-d">
 
     
 
@@ -188,7 +188,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2019 tombond100 &nbsp;- Badtian.oesker &nbsp; https://github.com/bastibond&nbsp;</p>
+                    © Copyright 2019 tombond100 &nbsp;- Bastian.oesker &nbsp; https://github.com/bastibond&nbsp;</p>
             </div>
         </div>
     </div>
